Fix for a buggy background on mobile

--- a/poem-style.css
+++ b/poem-style.css
@@ -4,6 +4,18 @@
 }
 
 body {
+  -moz-background-size: 100%; 
+  -o-background-size: 100%; 
+  background-size: 100%; 
+  -webkit-background-size: cover; 
+  -moz-background-size: cover; 
+  -o-background-size: cover;
+  background-size: 100%;
+  background-size: cover;
+  background: url(background-stars1.jpg) no-repeat center center fixed;
+  color: #00ff00;
+  font-family: monospace;
+  
   background: url(background-stars1.jpg) no-repeat center center fixed;
   background-size: cover;
   color: #00ff00;
